fixed spacing on prev-next links in top bar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -350,12 +350,12 @@ div.category-and-publishdate {
     }
     .prev-link {
         position: absolute;
-        left: 15%;
+        left: 18%;
         top: .25em;
     }
     .next-link {
         position: absolute;
-        right: 15%;
+        right: 18%;
         top: .25em;
     }
 }
